Improve .env handling and comment out proxy network

--- a/compose.override.yml
+++ b/compose.override.yml
@@ -1,28 +1,43 @@
 # compose.override.yml
 services:
-  # main runtime
-  bun-node:
-    image: oven/bun:alpine
-    environment: [TZ, NODE_ENV=devlopment]
-    volumes: [./src:/app]
-    ports: [5173:5173]
-    working_dir: /app
-    user: "1000"
-    tty: true
-  # backup runtime
-  node:
-    image: node:21-alpine
-    environment: [TZ]
-    volumes: [./src:/app]
-    ports: [8000:8000]
-    working_dir: /app
-    user: "1000"
-    tty: true
+    app:
+        ports:
+            - "8200:80"
+    mailpit:
+        image: axllent/mailpit:latest
+        environment:
+            TZ: ${TZ:-UTC}
+        ports:
+            - "8025:8025"
+        expose:
+            - "1025"
+        tty: true
+    # main runtime
+    bun-node:
+        image: oven/bun:alpine
+        environment:
+            TZ: ${TZ:-UTC}
+            NODE_ENV: development
+        volumes: [./src:/app]
+        ports: [5173:5173]
+        working_dir: /app
+        user: "1000"
+        tty: true
+    # backup runtime
+    node:
+        image: node:21-alpine
+        environment:
+            TZ: ${TZ:-UTC}
+        volumes: [./src:/app]
+        ports: [8000:8000]
+        working_dir: /app
+        user: "1000"
+        tty: true
 
-  npm:
-    extends: node
-    entrypoint: ["npm", "--no-update-notifier"]
+    npm:
+        extends: node
+        entrypoint: ["npm", "--no-update-notifier"]
 
-  yarn:
-    extends: node
-    entrypoint: ["yarn"]
+    yarn:
+        extends: node
+        entrypoint: ["yarn"]
