--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-COMPOSE_PROJECT_NAME=example.org
+COMPOSE_PROJECT_NAME=example
 
 WEB_DOCUMENT_ROOT=/app/public
 
 TZ=Europe/Paris
 
-PHP_OPCACHE_VALIDATE_TIMESTAMPS=1
 PHP_DISMOD=ioncube
-
+PHP_OPCACHE_VALIDATE_TIMESTAMPS=1
 COMPOSER_NO_DEV=0
 
-MYSQL_DATABASE=app
-MYSQL_USER=admin
-MYSQL_PASSWORD=secret
+DATABASE_NAME=app
+DATABASE_USER=admin
+DATABASE_PASS=secret
