Enable app host port change via .env

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ WEB_DOCUMENT_ROOT=/app/public
 
 TZ=Europe/Paris
 
+APP_HOST_PORT=8080
+
 PHP_DISMOD=ioncube
 PHP_OPCACHE_VALIDATE_TIMESTAMPS=1
 COMPOSER_NO_DEV=0
