--- a/compose.yml
+++ b/compose.yml
@@ -22,7 +22,7 @@ services:
         volumes:
             - ./src:/app
         ports:
-            - "8200:80"
+            - "${APP_HOST_PORT:-8080}:80"
         working_dir: /app
         networks:
             - default
