--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 COMPOSE_PROJECT_NAME=example
+# COMPOSE_FILE=compose.yml:compose.proxy.yml
+
+APP_PORT=8000
 
 WEB_DOCUMENT_ROOT=/app/public
 
 TZ=Europe/Paris
-
-APP_HOST_PORT=8080
 
 PHP_DISMOD=ioncube
 PHP_OPCACHE_VALIDATE_TIMESTAMPS=1
@@ -13,3 +14,5 @@ COMPOSER_NO_DEV=0
 DATABASE_NAME=app
 DATABASE_USER=admin
 DATABASE_PASS=secret
+
+USE_MAILPIT=true
