Fix .env variable

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 COMPOSE_PROJECT_NAME=example
 # COMPOSE_FILE=compose.yml:compose.proxy.yml
 
-APP_PORT=8000
+APP_HOST_PORT=8000
 
 WEB_DOCUMENT_ROOT=/app/public
 
